delivery/redis/overlays/redis-inflightreq-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redis-inflightreq-middleware
spec:
  inFlightReq:
    amount: 100
# protection aux attaques DDOS
